Removed feedback due to errors.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             padding: 20px;
             text-align: center;
             border-bottom: 5px solid #e67e22;
+            position: relative;
         }
         h1 {
             margin: 0;
@@ -61,8 +62,8 @@
             padding: 10px;
             margin-top: 20px;
         }
-        /* Contact and feedback tab styling */
-        .tab {
+        /* Contact tab styling */
+        .contact-tab {
             position: fixed;
             bottom: 20px;
             right: 20px;
@@ -72,9 +73,8 @@
             border-radius: 8px;
             cursor: pointer;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-            margin-top: 10px;
         }
-        .contact-info, .feedback-section {
+        .contact-info {
             display: none;
             position: fixed;
             bottom: 70px;
@@ -92,38 +92,22 @@
         .contact-info a:hover {
             color: #e67e22;
         }
-        /* Feedback form */
-        .feedback-form input, .feedback-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            border: none;
-            background-color: #34495e;
+        /* YouTube Video Tab */
+        .video-tab {
+            background-color: #e74c3c;
             color: white;
-        }
-        .feedback-form button {
-            background-color: #1abc9c;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
+            text-align: center;
+            padding: 15px;
+            border-bottom: 5px solid #c0392b;
             cursor: pointer;
         }
-        .feedback-form button:hover {
-            background-color: #16a085;
-        }
-        .feedback-list {
-            margin-top: 20px;
-        }
-        .feedback-list .feedback-item {
-            background: #34495e;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-        }
-        .feedback-list .feedback-item strong {
-            color: #1abc9c;
+        .video-container {
+            display: none;
+            background-color: #34495e;
+            padding: 20px;
+            border-radius: 8px;
+            margin: 20px;
+            text-align: center;
         }
     </style>
 </head>
@@ -132,6 +116,18 @@
         <h1>My Projects</h1>
         <p>Welcome to my GitHub.io website!</p>
     </header>
+
+    <!-- YouTube Video Tab -->
+    <div class="video-tab" onclick="toggleVideo()">
+        Latest YouTube Video
+    </div>
+
+    <!-- YouTube Video Container -->
+    <div class="video-container" id="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/xVKjBbAvKGo" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen></iframe>
+    </div>
 
     <section>
         <h2>My Projects</h2>
@@ -155,28 +151,14 @@
     </section>
 
     <!-- Contact tab -->
-    <div class="tab" onclick="toggleContacts()">Contact Me</div>
-
-    <!-- Feedback tab -->
-    <div class="tab" style="bottom: 70px;" onclick="toggleFeedback()">Leave Feedback</div>
-
+    <div class="contact-tab" onclick="toggleContacts()">
+        Contact Me
+    </div>
+    
     <!-- Contact info -->
     <div class="contact-info" id="contact-info">
         <p><strong>Discord:</strong> filipkos1337</p>
         <p><strong>Twitter:</strong> <a href="https://twitter.com/FILipKOS_Gacha" target="_blank">@FILipKOS_Gacha</a></p>
-    </div>
-
-    <!-- Feedback form and comments -->
-    <div class="feedback-section" id="feedback-section">
-        <h3>Leave a Comment</h3>
-        <form class="feedback-form" onsubmit="addFeedback(event)">
-            <input type="text" id="nickname" placeholder="Your nickname (optional)">
-            <textarea id="comment" rows="4" placeholder="Your comment" required></textarea>
-            <button type="submit">Submit</button>
-        </form>
-        <div class="feedback-list" id="feedback-list">
-            <!-- User feedback will be displayed here -->
-        </div>
     </div>
 
     <footer>
@@ -193,29 +175,13 @@
             }
         }
 
-        function toggleFeedback() {
-            var feedbackSection = document.getElementById("feedback-section");
-            if (feedbackSection.style.display === "none" || feedbackSection.style.display === "") {
-                feedbackSection.style.display = "block";
+        function toggleVideo() {
+            var videoContainer = document.getElementById("video-container");
+            if (videoContainer.style.display === "none" || videoContainer.style.display === "") {
+                videoContainer.style.display = "block";
             } else {
-                feedbackSection.style.display = "none";
+                videoContainer.style.display = "none";
             }
-        }
-
-        function addFeedback(event) {
-            event.preventDefault();
-            var nickname = document.getElementById("nickname").value || "Guest";
-            var comment = document.getElementById("comment").value;
-
-            var feedbackList = document.getElementById("feedback-list");
-            var feedbackItem = document.createElement("div");
-            feedbackItem.className = "feedback-item";
-            feedbackItem.innerHTML = "<strong>" + nickname + ":</strong> " + comment;
-            feedbackList.appendChild(feedbackItem);
-
-            // Clear the form
-            document.getElementById("nickname").value = "";
-            document.getElementById("comment").value = "";
         }
     </script>
 </body>
