Updated map generation.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="project">
             <h3>3D Shooter Deathmatch Test</h3>
             <p>A fast-paced 3D shooter with random map resets every 20 minutes. Built using HTML and JavaScript.</p>
-            <a href="https://github.com/FILipKOS-Gacha/3d-shooter-deathmatch" target="_blank">View on GitHub</a>
+            <a href="https://filipkos-gacha.github.io/projects/3d-shooter-deathmatch/" target="_blank">Click to test it out.</a>
         </div>
 
         <div class="project">
