--- a/projects/3d-shooter-deathmatch/index.html
+++ b/projects/3d-shooter-deathmatch/index.html
@@ -9,8 +9,10 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="js/controls.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/postprocessing/EffectComposer.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/postprocessing/UnrealBloomPass.js"></script>
     <script src="js/renderer.js"></script>
+    <script src="js/controls.js"></script>
     <script src="js/game.js"></script>
     <script src="js/physics.js"></script>
     <script src="js/map.js"></script>
