Small test fixes.

--- a/projects/3d-shooter-deathmatch/index.html
+++ b/projects/3d-shooter-deathmatch/index.html
@@ -17,6 +17,6 @@
     <script src="js/physics.js"></script>
     <script src="js/map.js"></script>
     <script src="js/weapons.js"></script>
-    <script src="js/gameLoop.js"></script>
+    <script src="js/gameloop.js"></script>
 </body>
 </html>
