--- a/projects/3d-shooter-deathmatch/index.html
+++ b/projects/3d-shooter-deathmatch/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Shooter Game</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <style>
+        body { margin: 0; overflow: hidden; }
+        canvas { display: block; }
+    </style>
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
@@ -17,6 +20,6 @@
     <script src="js/physics.js"></script>
     <script src="js/map.js"></script>
     <script src="js/weapons.js"></script>
-    <script src="js/gameloop.js"></script>
+    <script src="js/gameLoop.js"></script>
 </body>
 </html>
