--- a/projects/3d-shooter-deathmatch/index.html
+++ b/projects/3d-shooter-deathmatch/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Shooter Game</title>
-    <style>
-        body { margin: 0; overflow: hidden; }
-        canvas { display: block; }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
