--- a/projects/3d-shooter-deathmatch/index.html
+++ b/projects/3d-shooter-deathmatch/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/postprocessing/EffectComposer.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/postprocessing/UnrealBloomPass.js"></script>
+    <script src="js/three.min.js"></script>
+    <script src="js/EffectComposer.js"></script>
+    <script src="js/UnrealBloomPass.js"></script>
     <script src="js/renderer.js"></script>
     <script src="js/controls.js"></script>
     <script src="js/game.js"></script>
