--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
         section {
             padding: 20px;
         }
+        /* Project section styling */
         .project {
             background: #34495e;
-            margin: 20px 0;
-            padding: 15px;
+            margin: 10px 0; /* Reduced margin */
+            padding: 10px; /* Reduced padding */
             border-radius: 8px;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3); /* Reduced shadow */
             transition: transform 0.2s;
         }
         .project:hover {
@@ -45,6 +46,10 @@
         }
         .project h3 {
             color: #1abc9c;
+            font-size: 1.2em; /* Reduced font size */
+        }
+        .project p {
+            font-size: 0.9em; /* Reduced font size for text */
         }
         .project a {
             text-decoration: none;
@@ -69,10 +74,11 @@
             right: 20px;
             background-color: #1abc9c;
             color: white;
-            padding: 10px;
+            padding: 5px 10px; /* Reduced padding */
             border-radius: 8px;
             cursor: pointer;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+            font-size: 0.9em; /* Smaller font size */
         }
         .contact-info {
             display: none;
@@ -80,7 +86,7 @@
             bottom: 70px;
             right: 20px;
             background-color: #2c3e50;
-            padding: 20px;
+            padding: 10px 20px;
             border-radius: 8px;
             color: white;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -97,14 +103,15 @@
             background-color: #e74c3c;
             color: white;
             text-align: center;
-            padding: 15px;
-            border-bottom: 5px solid #c0392b;
+            padding: 5px 10px; /* Reduced padding */
+            border-bottom: 3px solid #c0392b; /* Reduced border thickness */
             cursor: pointer;
+            font-size: 0.9em; /* Smaller font size */
         }
         .video-container {
             display: none;
             background-color: #34495e;
-            padding: 20px;
+            padding: 10px 20px; /* Adjusted padding */
             border-radius: 8px;
             margin: 20px;
             text-align: center;
@@ -133,20 +140,20 @@
         <h2>My Projects</h2>
         <div class="project">
             <h3>3D Shooter Deathmatch Test</h3>
-            <p>A fast-paced 3D shooter with random map resets every 20 minutes. Built using HTML and JavaScript.</p>
+            <p>A fast-paced 3D shooter with random map resets every 20 minutes. Built using HTML and JavaScript. (ALPHA BUILD, STILL IN WORK.)</p>
             <a href="https://filipkos-gacha.github.io/projects/3d-shooter-deathmatch/" target="_blank">Click to test it out.</a>
         </div>
 
         <div class="project">
             <h3>Filip's Weapon Pack!</h3>
             <p>A weapon pack I've decided to make for GMod. It only works for the Steam version.</p>
-            <a href="https://github.com/FILipKOS-Gacha/filips-weapon-pack-gmod" target="_blank">View on GitHub</a>
+            <a href="https://github.com/FILipKOS-Gacha/filips-weapon-pack-gmod" target="_blank">View on GitHub (Not available yet.)</a>
         </div>
 
         <div class="project">
             <h3>Portfolio</h3>
             <p>My SFM Portfolio.</p>
-            <a href="https://github.com/FILipKOS-Gacha/filips-portfolio" target="_blank">View on GitHub</a>
+            <a href="https://filipkos-gacha.github.io/projects/portfolio" target="_blank">Click to check out!</a>
         </div>
     </section>
 
