--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
         section {
             padding: 20px;
         }
-        /* Project section styling */
         .project {
             background: #34495e;
-            margin: 10px 0; /* Reduced margin */
-            padding: 10px; /* Reduced padding */
+            margin: 20px 0;
+            padding: 15px;
             border-radius: 8px;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3); /* Reduced shadow */
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
             transition: transform 0.2s;
         }
         .project:hover {
@@ -46,10 +45,6 @@
         }
         .project h3 {
             color: #1abc9c;
-            font-size: 1.2em; /* Reduced font size */
-        }
-        .project p {
-            font-size: 0.9em; /* Reduced font size for text */
         }
         .project a {
             text-decoration: none;
@@ -74,11 +69,10 @@
             right: 20px;
             background-color: #1abc9c;
             color: white;
-            padding: 5px 10px; /* Reduced padding */
+            padding: 10px;
             border-radius: 8px;
             cursor: pointer;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-            font-size: 0.9em; /* Smaller font size */
         }
         .contact-info {
             display: none;
@@ -86,7 +80,7 @@
             bottom: 70px;
             right: 20px;
             background-color: #2c3e50;
-            padding: 10px 20px;
+            padding: 20px;
             border-radius: 8px;
             color: white;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
@@ -103,15 +97,14 @@
             background-color: #e74c3c;
             color: white;
             text-align: center;
-            padding: 5px 10px; /* Reduced padding */
-            border-bottom: 3px solid #c0392b; /* Reduced border thickness */
+            padding: 15px;
+            border-bottom: 5px solid #c0392b;
             cursor: pointer;
-            font-size: 0.9em; /* Smaller font size */
         }
         .video-container {
             display: none;
             background-color: #34495e;
-            padding: 10px 20px; /* Adjusted padding */
+            padding: 20px;
             border-radius: 8px;
             margin: 20px;
             text-align: center;
@@ -131,7 +124,8 @@
 
     <!-- YouTube Video Container -->
     <div class="video-container" id="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/xVKjBbAvKGo" 
+        <!-- Embed your playlist here -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLSHKLavP3e54hrQ5urKe9yTaVvnT8BFHP&si=Fd44K4upx-SMAfq7" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen></iframe>
     </div>
@@ -140,7 +134,7 @@
         <h2>My Projects</h2>
         <div class="project">
             <h3>3D Shooter Deathmatch Test</h3>
-            <p>A fast-paced 3D shooter with random map resets every 20 minutes. Built using HTML and JavaScript. (ALPHA BUILD, STILL IN WORK.)</p>
+            <p>A fast-paced 3D shooter with random map resets every 20 minutes. Built using HTML and JavaScript.</p>
             <a href="https://filipkos-gacha.github.io/projects/3d-shooter-deathmatch/" target="_blank">Click to test it out.</a>
         </div>
 
@@ -153,7 +147,7 @@
         <div class="project">
             <h3>Portfolio</h3>
             <p>My SFM Portfolio.</p>
-            <a href="https://filipkos-gacha.github.io/projects/portfolio" target="_blank">Click to check out!</a>
+            <a href="https://filipkos-gacha.github.io/projects/filips-portfolio" target="_blank">Click to check out!</a>
         </div>
     </section>
 
