--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -38,49 +38,14 @@
             border-radius: 8px;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
             text-align: center;
-            display: inline-block;
-            width: 30%;
-            margin-right: 2%;
         }
         .portfolio-item img {
-            width: 100%;
+            max-width: 100%;
             border-radius: 8px;
-            cursor: pointer;
+            transition: transform 0.2s;
         }
         .portfolio-item img:hover {
             transform: scale(1.05);
-        }
-        /* Modal styles */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            padding-top: 100px;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.9);
-        }
-        .modal-content {
-            margin: auto;
-            display: block;
-            width: 80%;
-            max-width: 700px;
-        }
-        .modal-content:hover {
-            transform: scale(1.05);
-        }
-        /* Close button */
-        .close {
-            position: absolute;
-            top: 15px;
-            right: 35px;
-            color: #f4f4f4;
-            font-size: 40px;
-            font-weight: bold;
-            cursor: pointer;
         }
         footer {
             background-color: #2c3e50;
@@ -88,6 +53,21 @@
             text-align: center;
             padding: 10px;
             margin-top: 20px;
+        }
+        .return-home {
+            display: inline-block;
+            background-color: #1abc9c;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: bold;
+            margin-top: 20px;
+            text-align: center;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+        }
+        .return-home:hover {
+            background-color: #16a085;
         }
     </style>
 </head>
@@ -101,17 +81,42 @@
         <h2>Renders</h2>
 
         <div class="portfolio-item">
-            <img src="images/Dont even hide.png" alt="Don't even hide.." onclick="openModal(this)">
+            <img src="images/Dont even hide.png" alt="Don't even hide..">
         </div>
 
         <div class="portfolio-item">
-            <img src="images/Epic render.png" alt="*Epic walking out of fire!!!111!!1*" onclick="openModal(this)">
+            <img src="images/Epic render.png" alt="*Epic walking out of fire!!!111!!1*">
         </div>
 
         <div class="portfolio-item">
-            <img src="images/Test pose1.png" alt="Test pose on Gordon Freeman." onclick="openModal(this)">
+            <img src="images/Test pose1.png" alt="Test pose on Gordon Freeman.">
+        </div>
+		
+		<div class="portfolio-item">
+            <img src="images/Test pose2.png" alt="Test pose on Zombie Police.">
         </div>
 
+        <div class="portfolio-item">
+            <img src="images/Enough....png" alt="*Multiple personalities.*">
+        </div>
+
+        <div class="portfolio-item">
+            <img src="images/ww2.png" alt="World War 2">
+        </div>
+		
+		<div class="portfolio-item">
+            <img src="images/posingtestrender.png" alt="Test poses.">
+        </div>
+		
+		<div class="portfolio-item">
+            <img src="images/You won't come alive from this..png" alt="Death awaits you.">
+        </div>
+		
+		<div class="portfolio-item">
+            <img src="images/witheredbonnietestposerender2.png" alt="Bonnie...?">
+        </div>
+
+        <a href="index.html" class="return-home">Return to Home</a>
     </section>
 
     <footer>
