--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -38,14 +38,49 @@
             border-radius: 8px;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
             text-align: center;
+            display: inline-block;
+            width: 30%;
+            margin-right: 2%;
         }
         .portfolio-item img {
-            max-width: 100%;
+            width: 100%;
             border-radius: 8px;
-            transition: transform 0.2s;
+            cursor: pointer;
         }
         .portfolio-item img:hover {
             transform: scale(1.05);
+        }
+        /* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            padding-top: 100px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+        }
+        .modal-content:hover {
+            transform: scale(1.05);
+        }
+        /* Close button */
+        .close {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #f4f4f4;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
         }
         footer {
             background-color: #2c3e50;
@@ -53,21 +88,6 @@
             text-align: center;
             padding: 10px;
             margin-top: 20px;
-        }
-        .return-home {
-            display: inline-block;
-            background-color: #1abc9c;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: bold;
-            margin-top: 20px;
-            text-align: center;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-        }
-        .return-home:hover {
-            background-color: #16a085;
         }
     </style>
 </head>
