--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="project">
             <h3>Portfolio</h3>
             <p>My SFM Portfolio.</p>
-            <a href="https://filipkos-gacha.github.io/projects/filips-portfolio" target="_blank">Click to check out!</a>
+            <a href="https://filipkos-gacha.github.io/projects/portfolio" target="_blank">Click to check out!</a>
         </div>
     </section>
 
